--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,29 @@ margin: 0;
 
 }
 
-div {
-background-color: #f3eac2;
+.top-container{ 
+background-color: #9fd8df;
 
 }
 
 h1 {
 margin-top: 0;
 
+
+}
+
+
+.middle-container {
+background-color: blue;
+height:200px;
+width: 200px;
+
+
+}
+
+.bottom-container {
+background-color: red;
+height:200px;
+width: 200px;
 
 }
