--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
-body {
-margin: 0;
+
+body {  
+margin: 0; /*  centers everything that doesnt have a width unless you set the margin parameters */
 text-align: center;
 
 }
@@ -7,11 +8,14 @@ text-align: center;
 .top-container{ 
 background-color: #9fd8df;
 
+position: relative;
+
+padding-top: 100px;
+
 }
 
 h1 {
-width: 10%;
-margin: 0 auto 0 auto;
+margin-top: 0;
 
 
 }
@@ -37,3 +41,17 @@ width: 200px;
     text-decoration: underline;
 
 }
+
+.top-cloud {
+
+    position: absolute;
+    right: 300px;
+    top: 50px;
+}
+
+.bottom-cloud {
+    position: absolute;
+    left: 300px;
+    bottom: 300px;
+}
+
