added a font family stack to display how  the text is going to loook on the body page depending on what the user has installed on their machine

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@ body {
 margin: 0; /*  centers everything that doesnt have a width unless you set the margin parameters */
 text-align: center;
 
+font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
+
+
 }
 
 .top-container{ 
