--- a/css/style.css
+++ b/css/style.css
@@ -1,60 +1,56 @@
+body {
+  /*  centers everything that doesnt have a width unless you set the margin parameters */
+  margin: 0;
+  text-align: center;
 
-body {  
-margin: 0; /*  centers everything that doesnt have a width unless you set the margin parameters */
-text-align: center;
-
-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif
-
-
+  font-family: "Merriweather", serif;
 }
 
-.top-container{ 
-background-color: #9fd8df;
+.top-container {
+  background-color: #9fd8df;
 
-position: relative;
+  position: relative;
 
-padding-top: 100px;
-
+  padding-top: 100px;
 }
 
 h1 {
-margin-top: 0;
-
-
+  margin-top: 0;
+  font-family: "Sacramento";
 }
 
+h2 {
+  font-family: "Montserrat";
+}
+
+h3 {
+  font-family: "Montserrat";
+}
 
 .middle-container {
-background-color: blue;
-height:200px;
-width: 200px;
-
-
+  background-color: blue;
+  height: 200px;
+  width: 200px;
 }
 
 .bottom-container {
-background-color: red;
-height:200px;
-width: 200px;
-
+  background-color: red;
+  height: 200px;
+  width: 200px;
 }
 
 .pro {
-
-    text-decoration: underline;
-
+  text-decoration: underline;
 }
 
 .top-cloud {
-
-    position: absolute;
-    right: 300px;
-    top: 50px;
+  position: absolute;
+  right: 300px;
+  top: 50px;
 }
 
 .bottom-cloud {
-    position: absolute;
-    left: 300px;
-    bottom: 300px;
+  position: absolute;
+  left: 300px;
+  bottom: 300px;
 }
-
