--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@ body {
   text-align: center;
 
   font-family: "Merriweather", serif;
+
+  font-size: 200%;
 }
 
 .top-container {
@@ -14,13 +16,17 @@ body {
   padding-top: 100px;
 }
 
-h1 {
-  margin-top: 0;
+/*  REM does not get affatced by upstream size changes as opposed to percentages or em .*/
+h1 { /* 16px = 100% = 1em  */
+  margin-top: 50px auto 0 auto ;
   font-family: "Sacramento";
+/*  100% = 16px 90px/16= 562%  percentage is more dynmaic then pixels when it comes to the user change how they want to view the font size on their web browser */
+  font-size: 5.625rem; 
 }
 
 h2 {
   font-family: "Montserrat";
+  font-size: 2.5rem;
 }
 
 h3 {
@@ -28,15 +34,11 @@ h3 {
 }
 
 .middle-container {
-  background-color: blue;
-  height: 200px;
-  width: 200px;
+ 
 }
 
 .bottom-container {
-  background-color: red;
-  height: 200px;
-  width: 200px;
+  
 }
 
 .pro {
