--- a/css/style.css
+++ b/css/style.css
@@ -68,3 +68,20 @@ color: #11999E;
   left: 300px;
   bottom: 300px;
 }
+
+.skill-row {
+width: 50%;
+margin: 100px auto 100px auto;
+
+text-align: left;
+line-height: 2;
+}
+/*  one you pick image, consider using a giph as a live action image*/
+.computer {
+width: 25%;
+
+
+}
+.chillies{
+   width: 25%;
+}
