--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,15 @@ body {
   font-family: "Merriweather", serif;
 
   font-size: 200%;
+  color:#40514E;
+
 
 }
 
 .top-container {
-  background-color: #9fd8df;
+
+    background-color: #Eaf6f6;
+  /*background-color: #9fd8df; */
 
   position: relative;
 
@@ -34,18 +38,36 @@ h2 {
   font-size: 2.5rem;
   color: #66BFBF;
   font-weight: normal;
+  padding-bottom: 10px;
 }
 
 h3 {
   font-family: "Montserrat";
   color: #11999E;
 }
+
+p {
+
+    line-height: 2;
+}
+
+hr {
+
+    border: dotted #EAF6F6 6px;
+border-bottom: none;
+width: 4%;
+margin: 100px auto;
+
+
+}
+
 a{
 color: #11999E;
 
 }
 
 .middle-container {
+    margin: 100px 0;
  
 }
 
@@ -57,15 +79,22 @@ color: #11999E;
   text-decoration: underline;
 }
 
+.intro {
+width: 30%;
+
+margin: auto;
+
+}
+
 .top-cloud {
   position: absolute;
   right: 300px;
-  top: 50px;
+  top: 40px;
 }
 
 .bottom-cloud {
   position: absolute;
-  left: 300px;
+  left: 250px;
   bottom: 300px;
 }
 
@@ -74,7 +103,7 @@ width: 50%;
 margin: 100px auto 100px auto;
 
 text-align: left;
-line-height: 2;
+
 }
 /*  one you pick image, consider using a giph as a live action image*/
 .computer {
@@ -91,14 +120,63 @@ margin-right: 30px;
 
 }
 
-.code-skill-description  {
-
-    clear: left;
 
 
-}
-
-.chilli-skill-description {
-clear: right;
+.skills-title {
+color: #66BFBF;
 
 }
+
+.hot-wings {
+
+    color: #11999E;
+}
+
+.contact-message {
+    width: 40%;
+
+    margin: 40px auto 60px;
+}
+
+
+
+.BUTTON_ZPQ {
+    background: #11CDD4;
+    background-image: -webkit-linear-gradient(top, #11CDD4, #11999E);
+    background-image: -moz-linear-gradient(top, #11CDD4, #11999E);
+    background-image: -ms-linear-gradient(top, #11CDD4, #11999E);
+    background-image: -o-linear-gradient(top, #11CDD4, #11999E);
+    background-image: -webkit-gradient(to bottom, #11CDD4, #11999E);
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+    color: #FFFFFF;
+    font-family: Arial;
+    font-size: 20px;
+    font-weight: 100;
+    padding: 10px;
+    -webkit-box-shadow: 1px 1px 20px 0 #000000;
+    -moz-box-shadow: 1px 1px 20px 0 #000000;
+    box-shadow: 1px 1px 20px 0 #000000;
+    text-shadow: 1px 1px 20px #000000;
+    border: solid #337FED 0;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    text-align: center;
+ }
+ 
+ .BUTTON_ZPQ:hover {
+    border: solid #337FED 1px;
+    background: #303CB3;
+    background-image: -webkit-linear-gradient(top, #303CB3, #2BC4AD);
+    background-image: -moz-linear-gradient(top, #303CB3, #2BC4AD);
+    background-image: -ms-linear-gradient(top, #303CB3, #2BC4AD);
+    background-image: -o-linear-gradient(top, #303CB3, #2BC4AD);
+    background-image: -webkit-gradient(to bottom, #303CB3, #2BC4AD);
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+    text-decoration: none;
+ }
+
