--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ h1 { /* 16px = 100% = 1em  */
 }
 
 h2 {
-  font-family: "Montserrat";
+  font-family: "Montserrat", sans-serif;
   font-size: 2.5rem;
   color: #66BFBF;
   font-weight: normal;
@@ -151,7 +151,7 @@ color: #66BFBF;
     -moz-border-radius: 8px;
     border-radius: 8px;
     color: #FFFFFF;
-    font-family: Arial;
+    font-family: "Montserrat", sans-serif;
     font-size: 20px;
     font-weight: 100;
     padding: 10px;
