--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,7 @@ color: #11999E;
 }
 
 .bottom-container {
+    background-color: #66BFBF;
   
 }
 
@@ -122,15 +123,7 @@ margin-right: 30px;
 
 
 
-.skills-title {
-color: #66BFBF;
 
-}
-
-.hot-wings {
-
-    color: #11999E;
-}
 
 .contact-message {
     width: 40%;
